Bug 52268 - Splash Screen: Messages on first start displayed in wrong colour in the wrong place
Summary: Splash Screen: Messages on first start displayed in wrong colour in the wrong...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.6.0.2 rc
Hardware: All All
: medium normal
Assignee: Ivan Timofeev (retired)
URL:
Whiteboard: target:3.7.0 target:3.6.3
Keywords:
: 54636 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-07-19 15:17 UTC by Stefan Knorr
Modified: 2012-10-04 15:54 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Mockup of how it should look. (57.72 KB, image/png)
2012-07-19 15:17 UTC, Stefan Knorr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Knorr 2012-07-19 15:17:00 UTC
Created attachment 64398 [details]
Mockup of how it should look.

On the first start of LibreOffice on Windows, we display a number of messages. However, they are displayed in the wrong place and in the wrong colour (black - not very visible).

Expected: Messages should be displayed above the progress bar, in white (mockup attached).

The code for this is ~here:
http://opengrok.libreoffice.org/xref/core/desktop/source/splash/splash.cxx#611
Comment 1 Adolfo Jayme Barrientos 2012-07-22 01:43:02 UTC
In your mockup you put the text in a very big size to my taste -- I'd prefer if the text remains at the same size as it is currently, to avoid issues with long translations and such.
Comment 2 Rainer Bielefeld Retired 2012-09-14 11:25:10 UTC
Still  [Reproducible] with parallel installation of Master "LOdev  3.7.0.0.alpha0+   -  ENGLISH UI / German Locale  [Build ID: b45834b]"  {tinderbox: @6, pull time 2012-09-13 00:10:35} on German WIN7 Home Premium (64bit).

Steps how to reproduce if you do not see the messages after Installation:
1. Rename user profile (you find the place in program subfolder in 
   bootstrap.ini)
2. Launch LibO
   > Splash screen with progress bar appears:
   Bug: Initialisation info appears at te bottom of the splash screen
        and exceeds the splash screen.

I think suggestion in Mockup is ok, visibility also should be tested with high contrast OS and LibO.

This bug does not cause any problems (or does someone really read that?), but from marketing point of view it's a disaster. The first thing a new LibO user will see does not work correctly.

@Ivan:
Please set Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug or forward the Bug if it's not your turf.
Although we have more serious problems - do you see a chance to get that into 3.6.2?
Comment 3 Jean-Baptiste Faure 2012-09-23 05:30:07 UTC
Same problem on Linux.
Comment 4 Roman Eisele 2012-09-26 14:05:38 UTC
*** Bug 54636 has been marked as a duplicate of this bug. ***
Comment 5 Roman Eisele 2012-09-26 14:06:14 UTC
The same on Mac OS X, see bug 54636 for details.
Comment 6 Ivan Timofeev (retired) 2012-09-26 14:52:59 UTC
Interesting: on Linux there is a different splash screen implementation, which does not show the messages at all :)
http://opengrok.libreoffice.org/xref/core/desktop/unx/source/splashx.c#693
Comment 7 Not Assigned 2012-10-02 13:38:20 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b14073218ea28a5bf05cd639e30215787d67114c

fdo#52268: splash: change color and position of messages



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Not Assigned 2012-10-02 13:38:46 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=71b584680e4527283ccc4fa14169bc7d28d32344&g=libreoffice-3-6

fdo#52268: splash: change color and position of messages


It will be available in LibreOffice 3.6.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Roman Eisele 2012-10-04 15:54:53 UTC
@ Ivan Timofeev:
Thank you very much for fixing this issue!


VERIFIED as FIXED with LOdev 3.7.0.0.alpha0+ (Build ID: dd11a1e; pull time: 2012-10-04 12:52:50) on Mac OS X 10.6.8 (Intel).

Messages now appear as suggested in Astron’s mockup (white text above the progress bar), with smaller text like suggested by Fitoschido.
Overall impression is much better now. Nice!