fdo#52268: splash: change color and position of messages

Change-Id: If6c607fc9f0be1f7a71eda8d555399451938c5fc